style: mobile view overflow fixed

--- a/style.css
+++ b/style.css
@@ -21,11 +21,12 @@ body {
 /* ------------ Bubble Animation CSS Starts ------------ */
 .bubbles {
   position: absolute;
-  bottom: -25%;
+  bottom: -50%;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 25px;
-  width: 2000px;
+  gap: 50px;
+  margin-top: 20px;
+  width: 100vw;
   justify-content: space-around;
   animation: color-change 1.5s linear infinite;
 }
@@ -48,6 +49,17 @@ body {
   overflow: hidden;
   z-index: 1;
   filter: blur(5px);
+}
+
+@media (max-width: 768px) {
+  .bubbles {
+    gap: 100px;
+  }
+
+  .bubbles span {
+    height: 40px;
+    width: 40px;
+  }
 }
 
 @keyframes move {
